first round of changes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
       This should be the same across all pages.
      -->
-    <link rel="icon" href="./assets/images/1311.png" />
-		<title>Unemployables Portfolio</title>
+    <link rel="icon" href="./assets/images/JamiePiano1.png" />
+		<title>Jamie Xu Piano</title>
     <meta name="description" content="A portfolio template for the Unemployables community.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -28,11 +28,9 @@
     <!-- NAVBAR -->
     <div class="navbar">
       <a class="nav-title-link" href="./index.html">
-        <!-- TODO - Change the "Portfolio Title" to whatever you want displayed in the top left -->
-        <span class="nav-title">Portfolio Title</span>
-         <!-- TODO - Change the email after 'mailto:' to your email address for contact -->
-        <a class="button" href="mailto:whitevans.eth@gmail.com">
-          <span class="button-text">Contact Me</span>
+        <span class="nav-title">Jamie Xu</span>
+        <a class="button" href="mailto:jamiesxu@gmail.com">
+          <span class="button-text">Request a Free Lesson</span>
         </a>
       </a>
     </div>
@@ -42,19 +40,7 @@
 
       <!-- PORTFOLIO HEADER -->
       <div id="portfolio-header">
-        <div id="portfolio-header-image-container">
-          <!-- 
-            TODO
 
-            - Change the img "src" attribute to point to the Unemployable image you uploaded (or whatever image).
-            - Change the number to point to your Unemployable & replace the OpenSea link with your own
-            - If you aren't using an Unemployable as your image, remove the entire "a" element
-          -->
-          <img src="./assets/images/1311.png" class="portfolio-header-image">
-          <a class="no-underline" target="_blank" href="https://opensea.io/assets/0xe0be388ab81c47b0f098d2030a1c9ef190691a8a/1311">
-            <span class="image-caption">Unemployables #1311</span>
-          </a>
-        </div>
 
           <!-- 
             TODO
@@ -65,14 +51,28 @@
           -->
         <div id="portfolio-header-text-container">
             <div class="header-text">
-              <span class="main-title">Hey, I'm @ndoherty_eth.</span>
-              <div class="body-text">I’m a freelance designer and developer who aims to help other creatives build out their portfolios, skillset, and businesses.</div>
+              <span class="main-title">Jamie Xu's Piano Studio</span>
+              <div class="body-text"> </div>
             </div>
-            <a class="button" id="my-work-link">
+            <!-- <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
-            </a>
+            </a> -->
         </div>
+      </div>
+
+      <div id="portfolio-header-image-container">
+        <!-- 
+          TODO
+
+          - Change the img "src" attribute to point to the Unemployable image you uploaded (or whatever image).
+          - Change the number to point to your Unemployable & replace the OpenSea link with your own
+          - If you aren't using an Unemployable as your image, remove the entire "a" element
+        -->
+        <img src="./assets/images/JamiePiano1.png" class="portfolio-header-image">
+        <a class="no-underline" target="_blank" href="https://opensea.io/assets/0xe0be388ab81c47b0f098d2030a1c9ef190691a8a/1311">
+          <!-- <span class="image-caption">Unemployables #1311</span> -->
+        </a>
       </div>
 
       <!-- ABOUT SECTION -->
@@ -83,17 +83,19 @@
         - Add paragraphs using the <div class="body-text"></div> elements in the "about-section-content"
       -->
       <div id="about-section">
-        <span class="subheader-text">My Background / About Me</span>
+        <span class="subheader-text">About Me</span>
         <div class="about-section-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
-          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+          <div class="body-text">Jamie has over 15 years of piano playing experience and 5 years of teaching experience. She is a graduate of Washington University in St.Louis where she obtained her minor in music. There, she was heavily involved with the classical piano department. She is not only passionate about piano performance but also about piano teaching.
+          </div>
+          <div class="body-text">Jamie has won awards for both solo performance and concerto performances. Some of her most notable accomplishments include first place at the statewide Charlotte and Alfred Gray Competition, second place in the senior division of the Ohio Buckeye SouthWest Regional Competition, and second place in the Ohio SouthWest Graves Ensemble Competition. She has also completed all ten grades of the Royal Conservatory of Music exams, receiving honors at all levels.</div>
+          <div class="body-text">She offers piano lessons for ages 6 and above for beginner and intermediate students in the San Francisco Bay area. Her teaching approach is tailored to each individual's needs, abilities, and aspirations. She is patient with students and emphasizes proper technique as well as creativity and a deep understanding of music. She believes in fostering a fun and creative environment that inspires musical confidence in her students.</div>
         </div>
       </div>
 
       <!-- PROJECTS / MY WORK SECTION -->
       <div id="my-work-section">
         <!-- TODO - Change the subheader-text to whatever you want the Projects section header to say -->
-        <span class="subheader-text">My Work / My Projects</span>
+        <span class="subheader-text">My Media</span>
 
         <div class="projects-container">
           <!-- 
@@ -118,10 +120,14 @@
                 - SMALL_PROJECT_DESCRIPTION: a quick project description (max 4 lines)
                 - PROJECT_PAGE_NAME.html: the html filename for the project (must be in project-pages folder)
           -->
-          <div class="project-card">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Ecc53prWn28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/jNETYLuu48Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/dSyrv-aG1vE?start=1534" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+          <!-- <div class="project-card">
             <img src="./assets/images/desktop.jpeg" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Project Name</div>
+              <div class="subheader-text project-title">My Media</div>
               <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
             </div>
             <a class="button" href="./project-pages/project-template.html">
@@ -143,7 +149,7 @@
           <div class="project-card">
             <img src="./assets/images/sketchbook.jpeg" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Super Long Project Name That Should be Hidden</div>
+              <div class="subheader-text project-title">My Credentials</div>
               <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
             </div>
             <a class="button" href="./project-pages/project-template.html">
@@ -151,7 +157,7 @@
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -178,7 +184,7 @@
       
         This should be the same across all pages.
       -->
-      <a class="icon-link" href="mailto:whitevans.eth@gmail.com">
+      <a class="icon-link" href="mailto:jamiesxu@gmail.com">
         <image src="./assets/icons/mail.svg" class="footer-icon"/>
       </a>
     </div>
