--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
         This should be the same across all pages.
       -->
-      <a class="icon-link" target="_blank" href="https://twitter.com/whitevans_eth">
+      <a class="icon-link" target="_blank" href="https://instagram.com/jamie.shenx?igshid=MjEwN2IyYWYwYw==">
         <image src="./assets/icons/instagram.svg" class="footer-icon"/>
       </a>
       <!-- 
