--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
       
         This should be the same across all pages.
       -->
-      <a class="icon-link" target="_blank" href="https://twitter.com/whitevans_eth">
+      <!-- <a class="icon-link" target="_blank" href="https://twitter.com/whitevans_eth">
         <image src="./assets/icons/twitter.svg" class="footer-icon"/>
-      </a>
+      </a> -->
       <!-- 
         TODO - Change the email after "mailto" to your contact email 
       
