Fasterimage Changed description
1.0

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           - Change the number to point to your Unemployable & replace the OpenSea link with your own
           - If you aren't using an Unemployable as your image, remove the entire "a" element
         -->
-        <img src="./assets/images/JamiePiano1.png" class="portfolio-header-image">
+        <img src="./assets/images/JamiePiano1Screenshot.png" class="portfolio-header-image">
         <a class="no-underline" target="_blank" href="https://opensea.io/assets/0xe0be388ab81c47b0f098d2030a1c9ef190691a8a/1311">
           <!-- <span class="image-caption">Unemployables #1311</span> -->
         </a>
@@ -85,10 +85,10 @@
       <div id="about-section">
         <span class="subheader-text">About Me</span>
         <div class="about-section-content">
-          <div class="body-text">Jamie has over 15 years of piano playing experience and 5 years of teaching experience. She is a graduate of Washington University in St.Louis where she obtained her minor in music. There, she was heavily involved with the classical piano department. She is not only passionate about piano performance but also about piano teaching.
+          <div class="body-text">Jamie has over 15 years of piano playing experience and 5 years of teaching experience. She is a graduate of Washington University in St. Louis where she obtained her Bachelors in linguistics and minor in music. There, she was heavily involved with the classical piano department. She is also passionate about piano teaching.
           </div>
-          <div class="body-text">Jamie has won awards for both solo performance and concerto performances. Some of her most notable accomplishments include first place at the statewide Charlotte and Alfred Gray Competition, second place in the senior division of the Ohio Buckeye SouthWest Regional Competition, and second place in the Ohio SouthWest Graves Ensemble Competition. She has also completed all ten grades of the Royal Conservatory of Music exams, receiving honors at all levels.</div>
-          <div class="body-text">She offers piano lessons for ages 6 and above for beginner and intermediate students in the San Francisco Bay area. Her teaching approach is tailored to each individual's needs, abilities, and aspirations. She is patient with students and emphasizes proper technique as well as creativity and a deep understanding of music. She believes in fostering a fun and creative environment that inspires musical confidence in her students.</div>
+          <div class="body-text">Jamie has won multiple awards for both solo performance and concerto performances. Some of her most notable accomplishments include first place in the Washington University Friends of Music Concerto & Aria Competition, first place at the statewide Charlotte and Alfred Gray Competition, second place in the senior division of the Ohio Buckeye SouthWest Regional Competition, and second place in the Ohio SouthWest Graves Ensemble Competition. She has also completed all ten grades of the Royal Conservatory of Music exams, receiving honors at all participating levels.</div>
+          <div class="body-text">She offers in-person piano lessons for ages 6 and above for beginner and intermediate students in the San Francisco Bay area. Her teaching approach is tailored to each individual's needs, abilities, and aspirations. She is patient with students and emphasizes proper technique as well as creativity and a deep understanding of music. She believes in fostering a fun and creative environment that inspires musical confidence in her students.</div>
         </div>
       </div>
 
